@@ -1,5 +1,6 @@
 24 March 2015: Wouter
 	- Fix #654: Fix contradiction in notify logging verbosity level.
+	- Incoming notifies have serial number logged (at verbosity 1).
 
 17 March 2015: Wouter
 	- Use reallocarray for integer overflow protection, patch submitted
